adding the jar for execution purposes